<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_mobile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_edittext_background"
        android:layout_marginTop="273dp"
        android:paddingStart="10dp"
        android:hint="@string/mobile"
        android:inputType="phone"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/edit_text_mobile"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_btn_background"
        android:layout_below="@id/edit_text_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/don_t_have_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_btn_background"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>
