<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_edittext_background"
    android:layout_marginBottom="17dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/vehicle_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image" />

    <TextView
        android:id="@+id/vehicle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/vehicle_number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/vehicle_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/vehicle_type"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/vehicle_description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/vehicle_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/vehicle_price_per_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/vehicle_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="City"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <Button
        android:id="@+id/location"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn_background"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:contentDescription="@string/edit"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_background"
            android:layout_marginEnd="8dp"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:contentDescription="@string/delete"
            android:src="@android:drawable/ic_menu_delete"
            android:background="@drawable/rounded_btn_background"
            android:layout_weight="1"
            android:visibility="visible"/>
    </LinearLayout>
</LinearLayout>
